# market-skills

./: .gitignore  AGENTS.md  ARCHITECTURE.md  INDEX.md  LICENSE  LLM-ORCHESTRATION.md  README.md  TODO.md  pyproject.toml
.beads/: .gitignore  config.yaml  metadata.json
analysis/: chop.py  contracts.py  conviction_thresholds.py  data.py  decision.py  formatting.py  indicators.py  intervals.py  macro.py  notes.py  notes_format.py  output.py  perp_state.py  registry.py  skill_loader.py  strategy_runner.py  toon.py  track_record.py  valuation.py  watchlist.py  watchlist_format.py
docs/: AXI-REFERENCE.md  AXI-REMAINING.md
lib/: contracts.py  data.py  formatting.py  indicators.py
portfolio/: contracts.py  db.py
skills/: __init__.py
tests/: conftest.py  test_afk_gate.py  test_axi_envelope.py  test_axi_envelope_diagnostics_sweep.py  test_axi_envelope_l1_sweep.py  test_axi_envelope_l2_sweep.py  test_axi_envelope_l3_sweep.py  test_axi_envelope_specialized_sweep.py  test_backtest_engine_fill.py  test_backtest_engine_forensic.py  test_backtest_engine_metrics.py  test_backtest_engine_walk_forward.py  test_backtest_pipeline.py  test_breakout_confirm_direction.py  test_bug_scan.py  test_chop.py  test_contracts.py  test_conviction_grid_journal_parse.py  test_conviction_thresholds.py  test_data.py  test_db_module_wiring.py  test_decision.py  test_dtp_journal_classifier.py  test_dtp_macro_gate.py  test_dtp_outcome_pricing.py  test_dtp_paths.py  test_execution_kraken_perps.py  test_execution_kraken_spot.py  test_friction_inventory_2026_07_09.py  test_home_view.py  test_home_view_wiring.py  test_hyperliquid_provider_retry.py  (+60 more)
(+211 files in other folders)
