[project]
name = "market-skills"
version = "0.1.0"
description = "Agent Skills for trading and market analysis — portable indicator library and composable skills"
requires-python = ">=3.12"
license = {text = "MIT"}
readme = "README.md"
dependencies = [
    "yfinance>=0.2.0",
    "ccxt>=4.4",
    "hyperliquid>=0.4.66",
]

[project.urls]
Repository = "https://github.com/krzysu/market-skills"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["analysis*", "portfolio*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"skills/*/scripts/run.py" = ["E402", "E501"]

[tool.ruff.format]
quote-style = "double"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.11.0",
]
